test/TestPhases/parser/valid/stringAllEscapes.blc

@[CFunction (binding = "\\    \a    \b    \f    \n    \r    \t    \v    \\    \'    \" " , header= "bla.h")]
extern function singleBackslash()

@[EntryPoint]
activity main()()
    await true
end


